manifests: move `amd-ucode-firmware` to FCOS-specific manifest
This change hasn't hit RHCOS/C9S yet so we can't put it in a shared
manifest.

Add a test so we know when RHCOS gets it.

Fixes 898bf23a ("manifests: Explicitly include amd-ucode-firmware").

(cherry picked from commit 76362abe815a6ec6c559745962064e7437030acc)

--- a/manifests/fedora-coreos-base.yaml
+++ b/manifests/fedora-coreos-base.yaml
@@ -184,6 +184,10 @@ packages-x86_64:
   - irqbalance
   - google-compute-engine-guest-configs-udev
   - crun-wasm wasmedge-rt
+  # Include AMD microcode updates, see https://github.com/coreos/fedora-coreos-tracker/issues/1618.
+  # This normally should belong in bootable-rpm-ostree.yaml (alongside
+  # `microcode_ctl`), but this change hasn't hit RHCOS yet.
+  - amd-ucode-firmware
 packages-ppc64le:
   - irqbalance
   - librtas
