--- a/manifest-lock.ppc64le.json
+++ b/manifest-lock.ppc64le.json
@@ -174,6 +174,12 @@
         "sourcerpm": "bind"
       }
     },
+    "bootupd": {
+      "evra": "0.2.16-2.fc39.ppc64le",
+      "metadata": {
+        "sourcerpm": "rust-bootupd"
+      }
+    },
     "brcmfmac-firmware": {
       "evra": "20231211-1.fc39.noarch",
       "metadata": {
