--- a/manifests/aarch64-drop-qcom-dtb-files.yaml
+++ b/manifests/aarch64-drop-qcom-dtb-files.yaml
@@ -1,6 +1,6 @@
 # Short term hack to avoid running out of space on aarch64. This should
-# save us about 14M. https://github.com/coreos/fedora-coreos-tracker/issues/1464
-# This can be removed once we are on F39+.
+# save us about 14M. https://github.com/coreos/fedora-coreos-tracker/issues/1637
+# This can be removed once we have added a barrier release.
 postprocess:
   - |
     #!/usr/bin/env bash
