Add bootupd package for s390x - Bootupd is now available for s390x as part of our ongoing efforts to integrate osbuild. Let's include it
- Let's also enable the existing test
to check it.

Signed-off-by: Renata Ravanelli <rravanel@redhat.com>

--- a/manifest-lock.s390x.json
+++ b/manifest-lock.s390x.json
@@ -168,6 +168,12 @@
         "sourcerpm": "bind"
       }
     },
+    "bootupd": {
+      "evra": "0.2.17-2.fc39.s390x",
+      "metadata": {
+        "sourcerpm": "rust-bootupd"
+      }
+    },
     "brcmfmac-firmware": {
       "evra": "20231211-1.fc39.noarch",
       "metadata": {
