--- a/manifests/fedora-coreos.yaml
+++ b/manifests/fedora-coreos.yaml
@@ -27,6 +27,12 @@ conditional-include:
     # passwd RPM was obsoleted by shadow-utils in F40+, but we need to keep
     # including it in F39. Remove this when we are on F40+ on all streams.
     include: passwd.yaml
+  - if: releasever == 39
+    # No longer need CNI plugins in f40 since Podman dropped
+    # support for CNI networking entirely in Podmanv5
+    # Remove this once we have Podman v5 in f39.
+    # xref: https://github.com/coreos/fedora-coreos-tracker/issues/1629
+    include: cni-plugins.yaml
 
 ostree-layers:
   - overlay/15fcos
