--- a/manifests/user-experience.yaml
+++ b/manifests/user-experience.yaml
@@ -37,13 +37,10 @@ packages:
   # Remote Access
   - openssh-clients openssh-server
   # Container tooling
-  ## crun recommends but doesn't require criu and criu-libs. We want them for
-  ## checkpoint/restore. https://github.com/coreos/fedora-coreos-tracker/issues/1370
-  - crun criu criu-libs
-  - podman
-  - runc
   - skopeo
-  - toolbox
+  # crun recommends but doesn't require criu and criu-libs. We want them for
+  # checkpoint/restore. https://github.com/coreos/fedora-coreos-tracker/issues/1370
+  - criu criu-libs
   # passt provides user-mode networking daemons for namespaces
   - passt
   # nvme-cli for managing nvme disks
