manifests/fedora-coreos-base: re-add qed-firmware
We lost this during a recent linux-firmware update which broke it out
into a separate subpackage. Re-add it.

Closes: https://github.com/coreos/fedora-coreos-tracker/issues/1746

--- a/manifest-lock.aarch64.json
+++ b/manifest-lock.aarch64.json
@@ -2124,6 +2124,12 @@
         "sourcerpm": "publicsuffix-list"
       }
     },
+    "qed-firmware": {
+      "evra": "20240610-1.fc40.noarch",
+      "metadata": {
+        "sourcerpm": "linux-firmware"
+      }
+    },
     "qemu-user-static-x86": {
       "evra": "2:8.2.2-1.fc40.aarch64",
       "metadata": {
