--- a/manifest-lock.s390x.json
+++ b/manifest-lock.s390x.json
@@ -2010,6 +2010,12 @@
         "sourcerpm": "publicsuffix-list"
       }
     },
+    "qed-firmware": {
+      "evra": "20240610-1.fc40.noarch",
+      "metadata": {
+        "sourcerpm": "linux-firmware"
+      }
+    },
     "qemu-user-static-x86": {
       "evra": "2:8.2.2-1.fc40.s390x",
       "metadata": {
