--- a/manifest-lock.x86_64.json
+++ b/manifest-lock.x86_64.json
@@ -2148,6 +2148,12 @@
         "sourcerpm": "publicsuffix-list"
       }
     },
+    "qed-firmware": {
+      "evra": "20240610-1.fc40.noarch",
+      "metadata": {
+        "sourcerpm": "linux-firmware"
+      }
+    },
     "readline": {
       "evra": "8.2-8.fc40.x86_64",
       "metadata": {
