--- a/kola-denylist.yaml
+++ b/kola-denylist.yaml
@@ -17,8 +17,14 @@
   arches:
     - ppc64le
 - pattern: ext.config.kdump.crash
-  tracker: https://github.com/rhkdump/kdump-utils/issues/22
+  tracker: https://github.com/coreos/fedora-coreos-tracker/issues/1762
   warn: true
-  snooze: 2024-07-15
+  snooze: 2024-07-20
+  arches:
+    - aarch64
+- pattern: kdump.crash.ssh
+  tracker: https://github.com/coreos/fedora-coreos-tracker/issues/1762
+  warn: true
+  snooze: 2024-07-20
   arches:
     - aarch64
